k8s/prod/model-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-service
  namespace: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: model-service
  template:
    metadata:
      labels:
        app: model-service
    spec:
      containers:
        - name: model
          image: us-central1-docker.pkg.dev/plant-cure-494022/plant-cure-repo/model:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"

            limits:
              cpu: "500m"
              memory: "1Gi"
