k8s/prod/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: prod
spec:
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
