k8s/prod/model-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-service
  namespace: prod
spec:
  selector:
    app: model-service
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: ClusterIP
